# Battleship

./: .gitignore  Battleship.sln  CMakeLists.txt  README.md
BattleshipClient/: App.xaml  App.xaml.cs  BattleshipClient.csproj  Board.cs  BoardGridSizeConverter.cs  GameClient.cs  GamePage.xaml  GamePage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MenuPage.xaml  MenuPage.xaml.cs  OpponentBoard.cs  PlayerBoard.cs  Ship.cs
BattleshipClient/resources/: ResourceDictionary.xaml
BattleshipServer/: BattleshipServer.cpp  BattleshipServer.h  Board.h  CMakeLists.txt  ClassicBoard.cpp  ClassicBoard.h  CommandParser.h  ConnectionManager.cpp  ConnectionManager.h  Game.cpp  Game.h  Matchmaker.cpp  Matchmaker.h  Player.cpp  Player.h  PlayerCommands.cpp  PlayerCommands.h
Sockets/: CMakeLists.txt  Socket.h  SocketBSD.cpp  SocketBSD.h  StringSocket.cpp  StringSocket.h
